--- a/jQuery2/index.html
+++ b/jQuery2/index.html
@@ -15,7 +15,10 @@
 	    <input id="newItemInput" placeholder="new task">
 	    <button id="saveNewItem">Save</button>
 	    <button id="cancel">Cancel</button>
+	    
 	</form>
+	
+	<div class="stored"><button id="local-storage">Save to local storage</button></div>
 	
 	<div class="new-item-header">
 	    <button href="#" class="pull-right pencil" id="newListItem" style="">New</button>
@@ -34,7 +37,6 @@
 	    Archived
 	    <ul class="list-group" id="archivedList"></ul>
 	</div>
-	
 	
 	
 </body>
