--- a/nbaRoutes/js/teams/teamTmpl.html
+++ b/nbaRoutes/js/teams/teamTmpl.html
@@ -1,6 +1,6 @@
 <div class="inner-container">
     <div class="logo">
-        <img ng-src="$__FIXME__$">
+        <img ng-src="{{logoPath}}">
     </div>
     <div class="record">
         <h1> Wins: ???????? Losses: ???????? </h1>
