--- a/Angular-Directive-Project/app/dirDisplayTmpl.html
+++ b/Angular-Directive-Project/app/dirDisplayTmpl.html
@@ -1,3 +1,10 @@
 <div>
     <h1>User</h1>
 </div>
+
+<div>
+    <h3>{{user.name}}</h3>
+    <h4 ng-show="flag">Age: {{user.age}}</h4>
+    <h4 ng-show="flag">E-mail: {{user.email}}</h4>
+</div>
+
