--- a/Angular-Directive-Project/index.html
+++ b/Angular-Directive-Project/index.html
@@ -15,6 +15,8 @@
   <script src="app/app.js"></script>
   <script src="app/home/homeCtrl.js"></script>
   <script src="app/dirDisplay.js"></script>
+  <script src="app/weather/dirWeather.js"></script>
+  <script src="app/weather/weatherService.js"></script>
 </body>
 
 </html>
