--- a/Angular-Directive-Project/app/home/homeTmpl.html
+++ b/Angular-Directive-Project/app/home/homeTmpl.html
@@ -1,3 +1,3 @@
-<div>Text for days, coding for weeks.</div>
+<dir-weather current-user="users[0]"></dir-weather>
 
-<dir-display></dir-display>
+<dir-display ng-repeat="user in users"></dir-display>
