--- a/Angular-Directive-Project/app/home/homeTmpl.html
+++ b/Angular-Directive-Project/app/home/homeTmpl.html
@@ -1,3 +1,3 @@
-<dir-weather current-user="users[0]"></dir-weather>
+<dir-weather weather-call="getWeather(city)" current-user="currentUser"></dir-weather>
 
-<dir-display ng-repeat="user in users"></dir-display>
+<dir-display user-info="user" set-user="updateUser(user)" ng-repeat="user in users"></dir-display>
