--- a/no-server-project/app/js/home/homeTmpl.html
+++ b/no-server-project/app/js/home/homeTmpl.html
@@ -1,5 +1,18 @@
+<div class="home-top-banner"></div>
+
 <div class="home-container">
+   
     <div>
         <h1>Nicholas James Peterson</h1>
+        <h3>Web Developer</h3>
     </div>
+
+    <div class="home-nav-top">
+        <ul>
+            <li><a href="/#/portfolio">Portfolio</a></li>
+            <li><a href="/#/capabilities">Capabilities</a></li>
+            <li><a href="/#/contact">Contact</a></li>
+        </ul>
+    </div>
+
 </div>
