--- a/no-server-project/index.html
+++ b/no-server-project/index.html
@@ -9,32 +9,20 @@
 
 <body>
 
-    <div class="main-container">
-        <div class="nav-top">
-            <ul>
-                <li><a href="/#/home">Home</a></li>
-                <li><a href="/#/portfolio">Portfolio</a></li>
-                <li><a href="/#/about">About</a></li>
-                <li><a href="/#/contact">Contact</a></li>
-            </ul>
-        </div>
-
-    </div>
-
         <div ui-view class="router-view"></div>
     
         <div class="nav-bottom">
             <ul>
-                <li><a href="https://www.linkedin.com/in/npeterson1">LinkedIn</a></li>
-                <li><a href="https://github.com/beastnp">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/npeterson1"><img src="http://www.unm.edu/~alexa08/assets/linkedin_icon.png" height="40" width="40"></a></li>
+                <li><a href="https://github.com/beastnp"><img src="http://cdn.flaticon.com/png/256/25231.png" height="40" width="40"></a></li>
             </ul>
         </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
     <script src="app/app.js"></script>
-    <script src="app/masterService.js"></script>
-    <script src="app/js/about/aboutCtrl.js"></script>
+    <script src="app/js/capabilities/capabilitiesCtrl.js"></script>
+    <script src="app/js/capabilities/capabilitiesService.js"></script>
     <script src="app/js/contact/contactCtrl.js"></script>
     <script src="app/js/home/homeCtrl.js"></script>
     <script src="app/js/portfolio/portfolioCtrl.js"></script>
