--- a/no-server-project/app/js/contact/contactTmpl.html
+++ b/no-server-project/app/js/contact/contactTmpl.html
@@ -1,11 +1,4 @@
-<div class="nav-top">
-    <ul>
-        <li><a href="/#/home">Home</a></li>
-        <li><a href="/#/portfolio">Portfolio</a></li>
-        <li><a href="/#/capabilities">Capabilities</a></li>
-        <li><a href="/#/contact">Contact</a></li>
-    </ul>
-</div>
+<main-directive></main-directive>
 
 <div class="contact-container">
 
