--- a/no-server-project/index.html
+++ b/no-server-project/index.html
@@ -22,10 +22,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
     <script src="app/app.js"></script>
     <script src="app/js/capabilities/capabilitiesCtrl.js"></script>
-    <script src="app/js/capabilities/capabilitiesService.js"></script>
+    <script src="app/mainService.js"></script>
     <script src="app/js/contact/contactCtrl.js"></script>
     <script src="app/js/home/homeCtrl.js"></script>
     <script src="app/js/portfolio/portfolioCtrl.js"></script>
+    <script src="app/mainDirective.js"></script>
 
 </body>
 
