--- a/no-server-project/index.html
+++ b/no-server-project/index.html
@@ -21,10 +21,14 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
+    <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
+    
     <script src="app/app.js"></script>
     <script src="app/js/capabilities/capabilitiesCtrl.js"></script>
     <script src="app/mainService.js"></script>
     <script src="app/js/contact/contactCtrl.js"></script>
+    <script src="app/firebaseService.js"></script>
     <script src="app/js/home/homeCtrl.js"></script>
     <script src="app/js/portfolio/portfolioCtrl.js"></script>
     <script src="app/mainDirective.js"></script>
