--- a/no-server-project/app/js/capabilities/capabilitiesTmpl.html
+++ b/no-server-project/app/js/capabilities/capabilitiesTmpl.html
@@ -1,8 +1,14 @@
 <main-directive></main-directive>
 
-<div class="capabilities-header"></div>
-
 <div class="capabilities-container">
+
+    <div class="capabilities-header">
+        <div class="capabilities-bar"></div>
+        <div class="capabilities-quote">
+            Learning how to learn is life's most important skill. - Tony Buzan
+        </div>
+        
+    </div>
 
     <div class="capabilities-main">
 
