--- a/no-server-project/app/js/contact/contactTmpl.html
+++ b/no-server-project/app/js/contact/contactTmpl.html
@@ -11,15 +11,15 @@
     </div>
 
     <form class="email-form">
-        <input class="username" type="text" ng-model="username" placeholder="Your Name" required></input>
+        <input class="username" type="text" ng-model="email.username" placeholder="Your Name" required></input>
         <br>
-        <input class="user-email" type="text" ng-model="userEmail" placeholder="Your E-Mail Address" required></input>
+        <input class="user-email" type="text" ng-model="email.userEmail" placeholder="Your E-Mail Address" required></input>
         <br>
-        <input class="email-subject" type="text" ng-model="emailSubject" placeholder="Subject" required></input>
+        <input class="email-subject" type="text" ng-model="email.emailSubject" placeholder="Subject" required></input>
         <br>
-        <textarea class="email-compose" ng-model="emailCompose" placeholder="Your Message" required></textarea>
+        <textarea class="email-compose" ng-model="email.emailCompose" placeholder="Your Message" required></textarea>
         <br>
-        <button class="submit-button" ng-click="sendEmail()">Send</button>
+        <button class="submit-button" ng-click="submit()">Send</button>
     </form>
 
 </div>
