--- a/ecommerce-part-one/public/index.html
+++ b/ecommerce-part-one/public/index.html
@@ -16,6 +16,7 @@
         <script src="views/admin/adminCtrl.js"></script>
         <script src="views/home/homeCtrl.js"></script>
         <script src="services/mainService.js"></script>
+        <script src="directives/mainDirective.js"></script>
         
     </body>
 </html>
